[project]
name = "agent-tutor"
version = "0.1.0"
description = ""
authors = [
    {name = "inkay_liu",email = "enkai.liu.1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
